task3/K8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-server-deployment
  labels:
    app.kubernetes.io/name: http-server
spec:
  replicas: 3 
  selector:
    matchLabels:
      app.kubernetes.io/name: http-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: http-server
    spec:
      containers:
        - name: http-server
          image: atatekeli/simple-python-app:v2 
          ports:
            - containerPort: 3000  
          resources:
            requests:
              memory: "64Mi"
              cpu: "256m"
            limits:
              memory: "128Mi"
              cpu: "512m"
          
          livenessProbe:
            httpGet:
              path: /healthz  
              port: 3000  
            initialDelaySeconds: 10  
            periodSeconds: 5  

      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app.kubernetes.io/name
                    operator: In
                    values:
                      - http-server
              topologyKey: "kubernetes.io/hostname"  

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1  
      maxUnavailable: 1
