task3/K8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-server-service
spec:
  type: NodePort
  selector:
    app: http-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
