task3/K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: localhost:3000  
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: http-server-service
                port:
                  number: 80
